Enhancement: Wrote Unit Tests that call the rpc endpoints and test the authentication for various jwts. TODO: Write tests for listProgram() call (verify that only the right Programs are listed) TODO: Figure out why the wrongAdmin test is passing, even though the test is wrong...